<resources>
    <string name="app_name" translatable="false">kooKings</string>
    <string name="remove"><i><b>Remove</b></i></string>
    <string name="edit"><i><b>Edit</b></i></string>
    <string name="add_image"><i><b>Add image</b></i></string>
    <string name="single_recipe"><i><b>kooKing</b></i></string>
    <string name="search_hint">Enter a kooking...</string>

    <!-- templates for recipeAdapter -->
    <string name="category">(%s)</string>
    <string name="author">by %s</string>

    <!-- Bottom nav items-->
    <string name="bottom_nav_recipes">Recipes</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_filter">Filter</string>

    <!-- NewEditRecipe fields-->
    <string name="edit_form_hint_title"><b><i>Title</i></b></string>
    <string name="edit_form_hint_category"><b><i>Category</i></b></string>
    <string name="edit_form_hint_author"><b><i>Author</i></b></string>
    <string name="save_recipe_button_description">Save button</string>
    <string name="add_step_button_text">Add\nStep</string>

    <!--Categories -->
    <string-array name="categories">
        <item>American cuisine</item>
        <item>Asian cuisine</item>
        <item>Eastern cuisine</item>
        <item>European cuisine</item>
        <item>Mediterranean cuisine</item>
        <item>Pan-Asian cuisine</item>
        <item>Russian cuisine</item>
    </string-array>

    <string name="american">American cuisine</string>
    <string name="asian">Asian cuisine</string>
    <string name="eastern">Eastern cuisine</string>
    <string name="european">European cuisine</string>
    <string name="mediterranean">Mediterranean cuisine</string>
    <string name="pan_asian">Pan-Asian cuisine</string>
    <string name="russian">Russian cuisine</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>