<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragmentFeed">
    <fragment
        android:id="@+id/fragmentFeed"
        android:name="com.andreirookie.essentialcookings.RecipeFeedFragment"
        android:label="@string/bottom_nav_recipes"
        tools:layout="@layout/fragment_feed">

        <action
            android:id="@+id/action_fragmentFeed_to_fragmentNewEditRecipe"
            app:destination="@id/fragmentNewEditRecipe" />
        <action
            android:id="@+id/action_fragmentFeed_to_singleRecipeFragment"
            app:destination="@id/fragmentSingleRecipe"/>
    </fragment>


    <fragment
        android:id="@+id/fragmentSingleRecipe"
        android:name="com.andreirookie.essentialcookings.SingleRecipeFragment"
        android:label="@string/single_recipe"
        tools:layout="@layout/fragment_single_recipe" />
    <fragment
        android:id="@+id/fragmentFilters"
        android:name="com.andreirookie.essentialcookings.FilterFragment"
        android:label="@string/bottom_nav_filter"
        tools:layout="@layout/fragment_filter" >

    </fragment>

    <fragment
        android:id="@+id/fragmentFavorites"
        android:name="com.andreirookie.essentialcookings.FavoritesFragment"
        android:label="@string/bottom_nav_favorites"
        tools:layout="@layout/fragment_favorites" >

        <action
            android:id="@+id/action_fragmentFavorites_to_fragmentNewEditRecipe"
            app:destination="@id/fragmentNewEditRecipe" />
        <action
            android:id="@+id/action_fragmentFavorites_to_singleRecipeFragment"
            app:destination="@id/fragmentSingleRecipe"/>
    </fragment>

    <fragment
        android:id="@+id/fragmentNewEditRecipe"
        android:name="com.andreirookie.essentialcookings.NewRecipeFragment"
        android:label="kook It"
        tools:layout="@layout/fragment_new_edit_recipe"  >
        <action
            android:id="@+id/action_fragmentNewEditRecipe_to_fragmentFeed"
            app:destination="@id/fragmentFeed" />
        <action
            android:id="@+id/action_fragmentNewEditRecipe_to_fragmentNewStep"
            app:destination="@id/fragmentNewStep" />
    </fragment>

    <fragment
        android:id="@+id/fragmentNewStep"
        android:name="com.andreirookie.essentialcookings.steps.NewStepFragment"
        android:label="New Step"
        tools:layout="@layout/fragment_new_step_layout">

    </fragment>

</navigation>



