<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <ImageView
        android:id="@+id/fragment_filter_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/filter_background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/american_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        android:backgroundTint="?attr/colorSecondary"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/asian_filter_item_form">


        <TextView
            android:id="@+id/american_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/american"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/american_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/asian_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@id/eastern_filter_item_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/american_filter_item_form">


        <TextView
            android:id="@+id/asian_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/asian"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/asian_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/eastern_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asian_filter_item_form"
        app:layout_constraintBottom_toTopOf="@id/european_filter_item_form">


        <TextView
            android:id="@+id/eastern_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/eastern"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/eastern_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/european_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eastern_filter_item_form"
        app:layout_constraintBottom_toTopOf="@id/mediterranean_filter_item_form">


        <TextView
            android:id="@+id/european_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/european"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/european_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mediterranean_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/european_filter_item_form"
        app:layout_constraintBottom_toTopOf="@id/pan_asian_filter_item_form">


        <TextView
            android:id="@+id/mediterranean_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/mediterranean"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/mediterranean_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pan_asian_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediterranean_filter_item_form"
        app:layout_constraintBottom_toTopOf="@id/russian_filter_item_form">


        <TextView
            android:id="@+id/pan_asian_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/pan_asian"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/pan_asian_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/russian_filter_item_form"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_recipe_form_size_68dp"
        app:cardElevation="@dimen/min_margin_4dp"
        app:cardCornerRadius="@dimen/common_margin_8dp"
        android:layout_margin="@dimen/common_margin_8dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pan_asian_filter_item_form"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/russian_filter_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/common_margin_8dp"
            android:text="@string/russian"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <CheckBox
            android:id="@+id/russian_filter_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_8dp"
            android:checked="true"
            android:layout_gravity="end|center"/>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>