<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/new_recipe_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/casserole_pot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/title_edit_form"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cardElevation="@dimen/min_margin"
        app:cardCornerRadius="@dimen/common_margin"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/category_edit_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/min_margin"
            android:gravity="start|center"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:hint="@string/edit_form_hint_title"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/category_edit_form"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cardElevation="@dimen/min_margin"
        app:cardCornerRadius="@dimen/common_margin"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/title_edit_form"
        app:layout_constraintBottom_toTopOf="@id/author_edit_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/min_margin"
            android:gravity="start|center"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:hint="@string/edit_form_hint_category"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/author_edit_form"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cardElevation="@dimen/min_margin"
        app:cardCornerRadius="@dimen/common_margin"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/category_edit_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edit_author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/min_margin"
            android:gravity="start|center"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:hint="@string/edit_form_hint_author"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_save_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="Save recipe"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:src="@drawable/ic_save_recipe_fab_24"
        />

</androidx.constraintlayout.widget.ConstraintLayout>